# HELYOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RESET.md  THIRD_PARTY_NOTICES.md
apps/jarvis-kernel/: .coverage  README.md  pyproject.toml
apps/jarvis-kernel/src/jarvis_kernel/: __init__.py  __main__.py  chat.py  config.py  context.py  jarvis.py  main.py  mcp_server.py  persona.py  pulse.py
apps/jarvis-kernel/src/jarvis_kernel/agents/: __init__.py  advisory.py  base.py  business_scaffolder.py  invoice_reminder.py  llm.py  market_analyst.py  nvidia_lab.py  open_source_lab.py  orchestrator.py  paper_trader.py  reasoning.py  research.py  scribe.py
apps/jarvis-kernel/src/jarvis_kernel/api/: __init__.py  dashboard.py  routes.py  schemas.py
apps/jarvis-kernel/src/jarvis_kernel/business/: __init__.py  ledger.py  orders.py  portfolio.py  prospection.py
apps/jarvis-kernel/tests/: test_advisory.py  test_alpha.py  test_api.py  test_business_scaffolder.py  test_connectors.py  test_embedding_reclassifier.py  test_eval.py  test_event_bus.py  test_flag_verifier.py  test_governance.py  test_invoice_reminder.py  test_jarvis.py  test_ledger.py  test_library.py  test_licensing.py  test_market_analyst.py  test_mcp_client.py  test_mcp_server.py  test_modules.py  test_nvidia_lab.py  test_orchestration.py  test_orders.py  test_paper_trader.py  test_portfolio.py  test_prospection.py  test_pulse.py  test_reasoning.py  test_reclassifier.py  test_service_and_memory.py  test_web.py
apps/jarvis-kernel/web/: app.js  board.html  cockpit.html  index.html  manifest.webmanifest
(+132 files in other folders)
